// SPDX-License-Identifier: Apache-2.0
//
// Copyright 2023 The Enola <https://enola.dev> Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dev.enola.file;

import "google/protobuf/timestamp.proto";

option java_string_check_utf8 = true;
option java_package = "dev.enola.file.proto";
option java_multiple_files = true;
option go_package = "dev/enola/file";

message File {
  Metadata metadata = 1;
  bytes content = 2;
}

message Directory {
  Metadata metadata = 1;
  repeated Metadata files = 2;
  repeated Metadata directories = 3;
}

message Metadata {
  string name = 1;
  int64 size = 2;
  string media_type = 3;

  google.protobuf.Timestamp created = 10;
  google.protobuf.Timestamp modified = 11;
}
